[package]
name = "artio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.8.8"
serde = { version = "1.0.193", features = ["derive"] }
semver = { version = "1.0.20", features = ["serde"] }

[dev-dependencies]
predicates = "3.0.4"
tempfile = "3.8.1"
